src/objects/BecaCalculadora__c.object
<CustomObject>
    <fields>
        <fullName>CategoriaLetra__c</fullName>
        <globalPicklist>CategoriaLetra</globalPicklist>
        <label>Categoría (letra)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DescuentoInscripcion__c</fullName>
        <label>Descuento en Inscripción</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promedio__c</fullName>
        <label>Promedio</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Beca Calculadora</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CategoriaLetra__c</columns>
        <columns>DescuentoInscripcion__c</columns>
        <columns>Promedio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Beca Calculadora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Becas Calculadora</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>